--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
 
+ <html lang="en">
+   
+  <head>
+	  
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    
+    <title> Questions - Final Project Part 2 </title>
+
+  </head>
+  
+  <body>  
+	  
+	  <h1> Questions - Final Project Part 2 </h1>
+    
+     <p> 1. What was your previous knowledge of HTML/CSS/Javascript? </p>
+     <p> 2. Did you use a template or did you build your portfolio from scratch? </p>
+     <p> 3. What was your most challenging part of your portfolio (ie, the template, artifacts, CSS, etc.) </p>
+     <p> 4. How taking this class changed your view on Web Development? </p>
+     <p> 5. What would you recommend to future students taking this class? </p>
+
+	  
+	 
+   </body>
+  
+ </html>
