--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
               <p> 2. Did you use a template or did you build your portfolio from scratch? <br>     
               Answer -   I used the template that was provided to us for the Module 4 Assignment. </p>
 	  
-            <p> 3. What was your most challenging part of your portfolio?
+            <p> 3. What was your most challenging part of your portfolio? <br>
              Answer – The most challenging part of my portfolio included Javascript. It was the form 
                                 validation for the contact me page. </p>
 	  
-                <p> 4. How taking this class changed your view on Web Development? 
+                <p> 4. How taking this class changed your view on Web Development? <br>
                 Answer – Participating in this web development class helped me learn a lot about web 
                      development. I didn’t even know that we used HTML, CSS AND Javascript to create a  
                      website until I took this class. I learned that creating a webpage takes a lot of work.  It 
                      can also take a lot of time especially, when you are just beginning to learn how to do it.  </p>
 	  
-                   <p> 5. What would you recommend to future students taking this class? 
+                   <p> 5. What would you recommend to future students taking this class? <br>
 	  Answer – I recommend that students plan out their assignments and get good at managing  
                their time. I also recommend that they interact with other students and when they are 
             working on coding or if there is a mistake in their code, they should go through it or code it step 
